...
                        />
                    </TouchableOpacity>
                ) : rightOption === 'profile' ? (
                    <TouchableOpacity
                        style={styles.rightOption}
                        onPress={OnRightOptionPressHandler}
                        testID={'profileButton'}>
                        <Image
                            source={require('../assets/profileIcon.png')}
                            style={styles.profile}
                        />
                    </TouchableOpacity>
                ) : rightOption === 'login' ? (
...
