...
                    Alert.alert("Item Deleted", `'${item.title}' was successfully deleted!`)
                }},
                {text: "Cancel"},
            ])};

    return (
        <View height={'100%'} testID={'Delete_Menu_Item_Screen'}>
            <Header navigation={navigate} rightOption={'profile'}/>
            <View style={styles.titleView}>
                <Text style={styles.title}>Select Item to Delete:</Text>
            </View>
            <FlatList
                data={displayedItems}
...
