...
    }).catch((error) => {
      console.error(error);
    });
  }

  return (
    <View style={styles.mainView} testID={'Search_Screen'}>
      <Header navigation={navigate} rightOption={icon}/>
      <View style={styles.searchView}>
        <ImageBackground source={require('../../assets/restaurantImage.png')} style={styles.backgroundImage} >
          <View style={styles.overlay}>
          <Image
            source={require('../../assets/magnifyingGlass.png')}
...
