...
            return false
        }
        return true
    }

    return (
        <View style={styles.mainView} testID={'Opening_Hours_Editor_Screen'}>
            <Header navigation={navigate} rightOption={'profile'}/>
            <View style={styles.titleView}>
                <Text style={styles.title}>Edit Opening Hours</Text>
            </View>
            <ScrollView contentContainerStyle={styles.scrollView}>
                <EditDayHours
...
