...
        setBusinessTitle(text);
    };

    return (
        <>
            <Header rightOption="login" />
            <View style={styles.mainView} testID={'Register_Screen'}>
                <ScrollView
                    contentContainerStyle={styles.scrollView}
                    nestedScrollEnabled={true}
                    keyboardShouldPersistTaps={'handled'}
                    ref={scrollViewRef}
                    onContentSizeChange={() => scrollViewRef.current.scrollToEnd({animated: false})}
...
                            ) : null}
                            <TextInput
                                style={styles.textInput}
                                placeholder="First name"
                                placeholderTextColor={'#40404040'}
                                onChangeText={text => handleFirstName(text)}
                                testID={'registerFirstName'}
                            />
                            {!isLastName ? (
                                <Animatable.Text
                                    style={styles.errorText}
                                    animation="fadeInLeft"
                                    duration={500}>
...
                            ) : null}
                            <TextInput
                                style={styles.textInput}
                                placeholder="Last name"
                                placeholderTextColor={'#40404040'}
                                onChangeText={text => handleLastName(text)}
                                testID={'registerLastName'}
                            />
                            {!isEmail ? (
                                <Animatable.Text
                                    style={styles.errorText}
                                    animation="fadeInLeft"
                                    duration={500}>
...
                            ) : null}
                            <TextInput
                                style={styles.textInput}
                                placeholder="Email"
                                placeholderTextColor={'#40404040'}
                                onChangeText={text => handleEmail(text)}
                                testID={'registerEmail'}
                            />
                            {!isPassword ? (
                                <Animatable.Text
                                    style={styles.errorText}
                                    animation="fadeInLeft"
                                    duration={500}>
...
                            <TextInput
                                style={styles.textInput}
                                placeholder="Password"
                                secureTextEntry={true}
                                placeholderTextColor={'#40404040'}
                                onChangeText={text => handlePassword(text)}
                                testID={'registerPassword'}
                            />

                            <BouncyCheckbox
                                iconStyle={{borderColor: '#25a2af'}}
                                fillColor={'#25a2af'}
                                text={'Are you an owner?'}
...
                            )}
                        </View>
                    </View>
                    <View>
                        <TouchableOpacity
                            style={styles.expressoButton}
                            testID={'registerButton'}
                            onPress={() => {
                                if (validateInput()) {
                                    try {
                                        signUpNewUser();
                                    } catch (error) {}
                                }
...
